# pianotrain

./: README.md
src/: CMakeLists.txt  resources.qrc
src/data/scripts/: setup.lua  setup.py
src/data/scripts/exercises/: sightreading1.py  sightreading2.py  sightreadingrhythm1.py  sightreadingrhythm2.py  test.py
src/data/scripts/exercises/parts/: simplesightreading.py
src/data/scripts/lib/: util.py
src/pianotrain/: CMakeLists.txt  DynamicWrapScoreWidget.cpp  DynamicWrapScoreWidget.h  DynamicWrapScoreWidget.ui  Exercise.cpp  Exercise.h  ExerciseListWidget.cpp  ExerciseListWidget.h  ExerciseListWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Metronome.cpp  Metronome.h  MidiPerformance.cpp  MidiPerformance.h  MidiService.cpp  MidiService.h  ScoreWidget.cpp  ScoreWidget.h  ScoreWidgetBase.cpp  ScoreWidgetBase.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SightReadingExercise.cpp  SightReadingExercise.h  SightReadingWidget.cpp  SightReadingWidget.h  SightReadingWidget.ui  System.cpp  System.h  config.cmake.h  main.cpp
src/pianotrain/guido/: CMakeLists.txt  ExtendedGuidoWidget.cpp  ExtendedGuidoWidget.h  GuidoNoteMarker.cpp  GuidoNoteMarker.h  guidoextensions.cpp  guidoextensions.h
src/pianotrain/qtlua/: CMakeLists.txt  qtluabinding.cpp  qtluabinding.h
src/sounds/: README
